# quadprog-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
benches/: benchmark.rs
src/: lib.rs
