[package]
name = "quadprog"
version = "0.0.1"
readme = "README.md"
repository = "https://github.com/erikbrinkman/quadprog-rs"
documentation = "https://docs.rs/quadprog"
description = "A dense quadratic program solver in pure rust"
license = "GPL-2.0"
edition = "2021"

[dev-dependencies]
approx = "0.5.0"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
